--- a/Boxy/Run.ipynb
+++ b/Boxy/Run.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -19,6 +19,19 @@
      "text": [
       "pygame 1.9.6\n",
       "Hello from the pygame community. https://www.pygame.org/contribute.html\n"
+     ]
+    },
+    {
+     "ename": "error",
+     "evalue": "Unable to open file 'sounds/boom.wav'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31merror\u001b[0m                                     Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-838726e96cf9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;31m# Custom\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mBox\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mBox\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mSuper_Classes\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mBody\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mGettables\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mFruit\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/Documents/GitHub/Games/Boxy/Box.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mSuper_Classes\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mBody\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mShape\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mConstants\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mbox_size\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mG\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mprotector_color\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mprotector_line_color\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mprotector_size\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0meye_color\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mMake_Sounds\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mwood_bounce_sound\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mwood_break_sound\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mboom_sound\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mprotection_sound\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/Documents/GitHub/Games/Boxy/Make_Sounds.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0mwood_bounce2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset_volume\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0.3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m \u001b[0mboom\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpygame\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmixer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSound\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'sounds/boom.wav'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     14\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0mprotection\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpygame\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmixer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSound\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'sounds/protection.wav'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31merror\u001b[0m: Unable to open file 'sounds/boom.wav'"
      ]
     }
    ],
@@ -40,6 +53,8 @@
     "from Player import Player\n",
     "from Constants import display_size, S\n",
     "from Level import Level\n",
+    "from Make_Sounds import ouch_sound\n",
+    "\n",
     "\n",
     "                    \n",
     "def resolve_fall(bod,bod2): #resolving fall for non-character objects\n",
@@ -97,6 +112,9 @@
     "            character.current_status = Status(lives = 14, fruit = 85, boxes = 0)\n",
     "        else:    \n",
     "            crashed += 1\n",
+    "            \n",
+    "        if crashed == 2:\n",
+    "            ouch_sound()\n",
     "\n",
     "            \n",
     "##############################################################################\n",
@@ -188,7 +206,7 @@
     "        for i in level.box_list+level.platform_list+level.gettable_list:\n",
     "            i.interact(character)\n",
     "            \n",
-    "        crashed = character.dead # some of these interactions might have killed ya.\n",
+    "        crashed = (character.protection == -1) and not character.invulnerable # some of these interactions might have killed ya.\n",
     "        \n",
     "##############################################################################\n",
     "    # Prepare canvas and draw visuals\n",
@@ -204,6 +222,7 @@
     "    # Earthquake maker!\n",
     "    if ticker == -1 and character.flopping == (character.flop_stun-1):\n",
     "        ticker = len(shifts)-2  \n",
+    "        \n",
     "    elif ticker>=0:\n",
     "        ticker -=1\n",
     "    \n",
@@ -314,18 +333,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.3"
   }
  },
  "nbformat": 4,
